# karkas

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml  testing.yml
karkas/: __init__.py  cli.py  options.py  run.py
tests/: test_cli.py  test_options.py  test_run.py
