[tool.poetry]
name = "karkas"
version = "1.2.0"
description = "A project to update a user's ComicInfo.xml files Format element to the new values from Metron."
authors = ["Brian Pepple <bpepple@metron.cloud>"]
license = "GPL-3.0-or-later"
maintainers = ["Brian Pepple <bpepple@metron.cloud>"]
readme = "README.md"
packages = [{ include = "karkas" }]
exclude = ["*/**/*~"]
include = [{ path = "tests", format = "sdist" }]
keywords = ["comics", "comic", "metadata", "tagging", "tagger"]

[tool.poetry.dependencies]
python = "^3.10"
darkseid = "^4.0.5"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
tox = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/bpepple/karkas"
"Bug Tracker" = "https://github.com/bpepple/karkas/issues"

[tool.poetry.scripts]
karkas = "karkas.cli:main"

[tool.ruff]
extend-exclude = ["typings"]
line-length = 95
show-fixes = true
target-version = "py310"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["karkas"]
branch = true
concurrency = ["multiprocessing"]

[tool.pytest.ini_options]
addopts = """
    --junit-xml=test-results/pytest/results.xml
    -ra
    --strict-config
    --strict-markers
    --cov
    --cov-append
    --cov-report=html
    --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"